# pysfizz

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  pyproject.toml
.github/workflows/: build_wheels.yml  main.yml  test.yml  test_build.yml  test_pypi.yml
pysfizz/: __init__.py  bindings.cpp  parser.py  synth.py
