[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pysfizz"
version = "0.1.0"
description = "Python bindings for sfizz"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
]

[tool.scikit-build]
wheel.packages = ["pysfizz"]
cmake.build-type = "Release"

[tool.cibuildwheel]
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*"]
skip = ["*-musllinux*", "pp*"]

[tool.cibuildwheel.linux]
manylinux-x86_64-image = "manylinux2014"
manylinux-aarch64-image = "manylinux2014"

[tool.cibuildwheel.macos]
archs = ["x86_64", "arm64"]
environment = { MACOSX_DEPLOYMENT_TARGET = "10.13" }

[tool.cibuildwheel.windows]
archs = ["AMD64"]